--- a/public/partials/customers.html
+++ b/public/partials/customers.html
@@ -1,5 +1,5 @@
 <div ng-include="'partials/navigation_menu.html'"></div>
-<div class="container padding-body" ng-init="getAllBranches()">
+<div class="container padding-body" ng-init="getCurrentBranch()">
     <div ng-include="'partials/popups.html'"></div>
     <div class="row" style="margin-top: 70px; margin-left: 20px;" ng-show="showSearchPage">
         <div class="col-md-11">
