Add DB transactions

--- a/public/partials/branch.html
+++ b/public/partials/branch.html
@@ -11,10 +11,10 @@
                             <button class="btn btn-primary" ng-click="useBranch()" ng-disabled="actionDisabled">Use</button>
                         </div>
                         <div class="col-sm-2 col-sm-offset-3">
-                            <button class="btn btn-primary" ng-click="branchInfo()">Add branch</button>
+                            <button class="btn btn-primary" ng-click="addBranch()">Add branch</button>
                         </div>
                         <div class="col-sm-2">
-                            <button class="btn btn-primary" ng-click="branchInfo()" ng-disabled="actionDisabled">Update branch</button>
+                            <button class="btn btn-primary" ng-click="updateBranch()" ng-disabled="actionDisabled">Update branch</button>
                         </div>
                         <div class="col-sm-2">
                             <button class="btn btn-primary" ng-click="deleteBranch()" ng-disabled="actionDisabled">Delete branch</button>
